<!DOCTYPE resources [<!ENTITY nbsp "&#160;"><!-- non-breaking space, U+00A0 -->]>
<resources>
    <string name="app_name">adidiDemo</string>
    <string name="titleMain">ADIDI</string>
    <string name="login">Đăng nhập</string>
    <string name="createAccount">Tạo tài khoản</string>
    <string name="register">Đăng kí</string>
    <string name="lastNameHint">Họ*</string>
    <string name="firstNameHint">Tên*</string>
    <string name="areaCode">+84</string>
    <string name="phoneHint">Di động*</string>
    <string name="emailHint">Email*</string>
    <string name="passHint">Mật khẩu</string>
    <string name="introductionCodeHint">Mã giới thiệu</string>
    <string name="forgetPassWord"> <u> Quên mật khẩu </u></string>
    <string name="givenOtp">Nhận mã OTP</string>
    <string name="helperOTP">ADiDi sẽ gửi một mã kích hoạt qua số điện thoại bạn đã nhập</string>
    <string name="chooseService">HÃY LỰA CHỌN DỊCH VỤ PHÙ HỢP</string>
    <string name="cheapAndFast"><![CDATA[Để tiết kiệm chi phí & nhanh nhất]]></string>
    <string name="chooseVoucher">ƯU ĐÃI ADIDI DÀNH CHO BẠN</string>
    <string name="readMore">Xem thêm</string>
    <string name="discoverWhithAdidi">KHÁM PHÁ CÙNG ADiDi</string>
    //Data Voucher
    <string name="voucherName1"><p> VỆ SINH MÁY LẠNH - PHÁ ĐẢO CƠN NÓNG NGAY NÀO </p></string>
    <string name="voucherDetail1"><p>Việc không vệ sinh lưới lọc thường xuyên khiến lưới lọc bị bám đầy bụi bẩn, điều hòa phải hút gió vào và đẩy gió ra ít hơn nhưng công suất tiêu thụ lại cao hơn lúc bình thường.</p>
    <p>Như vậy, lượng&nbsp;<strong>điện năng tiêu thụ cao hơn</strong>, gây tiếng<strong>&nbsp;ồn</strong>&nbsp;nhiều hơn nhưng&nbsp;<strong>không mang lại hiệu quả làm lạnh tốt.</strong>&nbsp;</p>
    <p>Để khắc phục tình trạng trên bạn nên vệ sinh lưới lọc thường xuyên&nbsp;khoảng 1 tháng một lần (tùy vào mức độ sử dụng). Đối với những gia đình miền Bắc, cần tổng vệ sinh máy trước khi bước vào mùa hạ để đảm bảo điều hòa đạt được hiệu quả làm mát tối ưu.</p>
    <p><strong>Tải App Adidi -&gt; Vào mục lắp đặt -&gt; Nhập thông tin địa chỉ cần vệ sinh -&gt; chọn dịch vụ vệ sinh máy lạnh-&gt;ADIDI PHỤC VỤ TRONG VÒNG 30s.</strong></p></string>
    <string name="title_main">Trang chủ</string>
    <string name="title_list_order">Đơn hàng</string>
    <string name="title_notification">Thông báo</string>
    <string name="title_function">Chức năng</string>
    <string name="logOut">Đăng xuất</string>

    //Error
    <string name="errorFirstName">Vui lòng Không được để trống họ</string>
    <string name="errorAccount">Vui lòng kiểm tra mật khẩu</string>
    <string name="errorLastName">Vui lòng Không được để trống tên</string>
    <string name="errorPhone">Vui lòng Không được để trống số điện thoại</string>
    <string name="errorEmail">Vui lòng Không được để trống Email</string>
    <string name="errorPass">Vui lòng kiểm tra mật khẩu</string>
    <string name="active">Kích hoạt</string>
    <string name="helperActivityOTP">ADiDi sẽ gửi một mã kích hoạt qua số điện thoại bạn đã nhập. Dùng mã kích hoạt vừa nhận để kích hoạt tài khoản</string>
    <string name="Comfirm">Xác thực</string>
    <string name="successRegister">Đăng kí thành công</string>
    <string name="errorRegister">Mã xác thực bạn nhận không đúng</string>
    <string name="installationSanitary">Lắp đặt - Vệ sinh</string>
    <string name="groupProduct">Nhóm sản phẩm</string>
    <string name="common">Phổ thông</string>
    <string name="informationProduct">Thông tin sản phẩm</string>
    <string name="title_activity_maps">Map</string>
    <string name="toast_msg_no_support">Thiết bị không hỗ trợ phần mềm</string>
    <string name="toast_msg_setup_service_google">Dịch vụ Google play đã được cài đặt</string>
    <string name="dialog_thongbao">Thông báo</string>
    <string name="dialog_title_close">Đóng</string>
    <string name="dialogTitle">Ios Dialog Title</string>

    <!-- camera -->
    <string name="title_camera_on">Bật</string>
    <string name="title_camera_off">Tắt</string>
    <string name="title_camera_auto">Tự động</string>
    <string name="toast_msg_camera_disconnect">Không thể kết nối máy ảnh, vui lòng thử lại</string>
    <string name="toast_msg_err_save_picture_please_try">Lỗi trong quá trình lưu ảnh, vui lòng chụp lại</string>
    <string name="toast_msg_save_picture_please_wait">Đang lưu ảnh xin vui lòng đợi</string>
    <string name="truoc_image">Trước</string>
    <string name="sau_image">Sau</string>
    <string name="error_message_not_gps">K-smart không thể lấy được vị trí của bạn, vui lòng liên hệ quản lý</string>
    <string name="toast_message_image_send_sucess">Tải ảnh lên thành công</string>
    <string name="dialog_want_delete_image">Bạn có muốn xóa ảnh?</string>
    <string name="title_image">Hình ảnh:</string>
    <string name="dialog_yes">Có</string>
    <string name="dialog_not_acess">Không</string>
    <string name="disconnect_server_image_auto_send_login">Hiện tại đang mất kết nối với máy chủ, album ảnh đã được lưu lại và sẽ tự động gửi tiếp khi có kết nối mạng</string>
    <string name="toast_message_album_condition_send">Để gửi album lên hệ thống, bạn cần có ít nhất 1 ảnh</string>
    <string name="toast_message_album_try_send">Album chưa có hình ảnh nào, vui lòng thử lại</string>
    <string name="toast_message_album_info_update">Cập nhật thông tin album thành công</string>
    <string name="title_take_image_free">Chụp ảnh tại điểm tự do</string>
    <string name="error_message_170704">Có lỗi xảy ra, mã lỗi 170704</string>
    <string name="cancel">Hủy</string>
    <string name="message_unknow">Không xác định</string>
    <string name="takePhotoAgain">Chụp lại</string>
    <string name="save">Lưu</string>
    <string name="choose">Chọn</string>
    <string name="searchLocationVoice">Tìm kiếm bằng giọng nói</string>
    <string name="searchLocation">Tìm kiếm địa chỉ</string>
    <string name="back">Quay lại</string>

</resources>
