<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_login"
        tools:context=".Activity.RegisterActivity">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:title="@string/register"
            style="@style/ToolBarTheme.ToolBarStyle"
            android:theme="@style/ToolBarTheme.ToolBarStyle"
            />
        <LinearLayout
            android:orientation="vertical"
            android:paddingRight="@dimen/paddingMain"
            android:paddingLeft="@dimen/paddingMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:padding="@dimen/padding5dp"
                android:background="@drawable/background_layout_white"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">
                    <EditText
                        android:layout_marginLeft="@dimen/margin8dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/firstNameHint"
                        />
                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/lastNameHint"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="10">
                    <ImageView
                        android:layout_marginLeft="@dimen/margin8dp"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:src="@drawable/logo_viettnam"/>
                    <TextView
                        android:layout_marginLeft="@dimen/margin8dp"
                        android:gravity="center"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/areaCode"/>
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/ic_arrow_drop_down_black_24dp"/>
                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="7"
                        android:hint="@string/phoneHint" />
                </LinearLayout>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/emailHint" />
                <EditText
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/passHint" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/introductionCodeHint" />

            </LinearLayout>
            <Button
                android:layout_marginTop="@dimen/margin8dp"
                android:background="@drawable/background_button_no_boder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:text="@string/register"/>
        </LinearLayout>

    </LinearLayout>
</layout>
