<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity.RegisterActivity">
        <LinearLayout
            android:orientation="vertical"
            android:paddingRight="@dimen/paddingMain"
            android:paddingLeft="@dimen/paddingMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:padding="@dimen/padding5dp"
                android:background="@drawable/background_layout_white"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:id="@+id/editPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phoneHint"
                    />


            </LinearLayout>
            <EditText
                android:visibility="invisible"
                android:id="@+id/editHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
             />
            <Button
                android:id="@+id/btnControl"
                android:background="@drawable/background_button_no_boder"
                style="@style/button.Login"
                android:text="@string/givenOtp"/>
            <TextView
                android:id="@+id/tvHelper"
                android:layout_marginTop="@dimen/margin24dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/helperOTP"
                android:textColor="@color/colorWhite1"/>
        </LinearLayout>

    </LinearLayout>
</layout>
