<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity.ComfirmOTPActivity"
        android:orientation="vertical"
        android:background="@drawable/background_login">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/ToolBarTheme.ToolBarStyle"
            android:theme="@style/ToolBarTheme.ToolBarStyle"
            app:title="@string/Comfirm"

            />>
        <LinearLayout
            android:orientation="vertical"
            android:padding="@dimen/paddingMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <LinearLayout
                android:padding="@dimen/padding10dp"
                android:background="@drawable/background_round_white"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.mukesh.OtpView
                    android:id="@+id/otpComfirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    app:itemCount="4"
                    app:viewType="line"
                    app:lineColor="@color/colorGray2"
                    />

            </LinearLayout>

            <Button
                android:id="@+id/btnAcvite"
                style="@style/button.Login"
                android:background="@drawable/background_button_no_boder"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:text="@string/active"
                />

            <TextView
                android:padding="@dimen/padding10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/fontNormal"
                android:text="@string/helperActivityOTP"
                android:textColor="@color/colorWhite"
                android:gravity="center"
                />
        </LinearLayout>



    </LinearLayout>
</layout>
